--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "aws-sdk": "^2.6.3",
-    "bluebird": "^3.4.6"
+    "bluebird": "^3.4.6",
+    "aws-sdk-promise": "^0.0.2",
+    "util": "^0.10.3"
   },
   "description": "An AWS S3 storage adapter for Ghost 0.10+",
   "devDependencies": {
